fix experience buttons text overflow on pc

--- a/front_end/src/app/shared/button/button.component.scss
+++ b/front_end/src/app/shared/button/button.component.scss
@@ -1,3 +1,4 @@
+@use "styles/variables" as *;
 // Default button styles //
 
 button {
@@ -54,6 +55,12 @@ button:hover {
   width: 100%;
   font-weight: 600;
   font-size: 5vw;
+}
+
+@media (min-width: $breakpoint-md) {
+  .exp-btn-text {
+    font-size: 2.5vw;
+  }
 }
 
 // Footer button //
